...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="FULL NAME" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wX
                                        <rect key="frame" x="8" y="90" width="348" height="183"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <color key="backgroundColor" red="0.0" green="0.72984481820000002" blue="0.64854029609999997" alpha="1" colorSpace="calibratedRGB"/>
                                        <segments>
                                            <segment title="MALE"/>
                                            <segment title="FEMALE"/>
                                        </segments>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="70" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DD" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j5
                                                <rect key="frame" x="47" y="0.0" width="70" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="70" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vz
                                                <rect key="frame" x="124" y="0.0" width="70" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="70" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="YYYY" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="
                                                <rect key="frame" x="201" y="0.0" width="70" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <color key="backgroundColor" red="1" green="0.39323312310000003" blue="0.38932182240000002" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FormController"/>
                                        <state key="normal" title="COMPLETE PROFILE">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            <color key="titleShadowColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Complete Your Profile" id="9vz-VA-wdS"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                    <connections>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="rkt-bZ-KKM">
                        <barButtonItem key="leftBarButtonItem" image="menu" id="UWb-uE-Dew">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Sign out" id="hyJ-vp-c8w">
                            <connections>
                                <action selector="logoutButton:" destination="glO-ak-c8a" id="DPE-UM-Uux"/>
...
                                <rect key="frame" x="20" y="220" width="374" height="498"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Example@gmail.com" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" tr
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="73"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qb0-rY-oFi">
                                        <rect key="frame" x="0.0" y="85" width="374" height="73"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="340" width="374" height="73"/>
                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        <color key="backgroundColor" red="1" green="0.39323312308164016" blue="0.38932182239992486" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="SIGN UP">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
